# plonky2-pairing

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/curve/: bn128.rs  bn128_g2.rs  g1.rs  g2.rs  mod.rs
src/field/: bn128_base.rs  bn128_extension.rs  bn128_scalar.rs  field_testing.rs  mod.rs
src/field/extension/: dodecic.rs  mod.rs  quadratic.rs  sextic.rs
src/gadgets/: biguint.rs  curve.rs  g1.rs  g2.rs  mod.rs  nonnative_ext.rs  nonnative_fp.rs  nonnative_fp12.rs  nonnative_fp2.rs  nonnative_fp6.rs  pairing.rs  split_nonnative.rs  windowed_mul.rs
src/gadgets/gates/: mod.rs  nonnative_add.rs  nonnative_mul.rs  u28_to_u32.rs  u32_to_u28.rs
