[package]
name = "plonky2-pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { path = "../plonky2/plonky2" }
plonky2_util = { path = "../plonky2/util" }
plonky2_field = { path = "../plonky2/field" }
plonky2_u32 = { path = "../plonky2/u32" }
plonky2_ecdsa = { path = "../plonky2/ecdsa" }
num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
static_assertions = { version = "1.1.0", default-features = false }
anyhow = { version = "1.0.40", default-features = false }
